[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-nomic>=1.0.1",
    "langchain-openrouter>=0.2.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
